added logic for friends and collaboration
Now you can add friends by email and also get the list of friends and collaborate in a session
